:recycle: 메인 페이지, 로그인 페이지 이동시 CSS 스타일 오류
- color-primary-* tailwind 설정을 app.css로 이동.
- simple 레이아웃의 인라인 tailwind 설정 및 폰트 설정 삭제하고 vite로 변경

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -23,6 +23,13 @@
     --color-zinc-900: #171717;
     --color-zinc-950: #0a0a0a;
 
+    --color-primary-50: #f0f9ff;
+    --color-primary-100: #e0f2fe;
+    --color-primary-500: #0ea5e9;
+    --color-primary-600: #0284c7;
+    --color-primary-700: #0369a1;
+    --color-primary-900: #0c4a6e;
+
     --color-accent: var(--color-neutral-800);
     --color-accent-content: var(--color-neutral-800);
     --color-accent-foreground: var(--color-white);
@@ -66,7 +73,6 @@ select:focus[data-flux-control] {
 } */
 
 /* Custom Vesto Styles */
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap');
 
 @layer base {
     body {
